--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -1,3 +1,9 @@
+<!--home.component.html-->
+<!--Homepage to show all the case studies you can select-->
+<h2 class="text-center">Case Studies</h2>
+<p class="text-center">Select which case study to investigate first</p>
+
+<!--Card to populate the page with case studies-->
 <ul class="card-list">
   <li *ngFor="let caseStudy of case_studies" class="card-item">
     <a [routerLink]="'/caseStudy/' + caseStudy.id" class="card-link">
@@ -6,7 +12,7 @@
         <div class="card-body">
           <h5 class="card-title">{{caseStudy.name}}</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a [routerLink]="'/caseStudy/' + caseStudy.id" class="btn btn-primary">Go somewhere</a>
+          <a [routerLink]="'/case-study/' + caseStudy.id" class="btn btn-primary">Investigate</a>
         </div>
       </div>
     </a>
