Title: Upgrade Angular to v16.1.0, TypeScript to v5.1, and Adjust Eye Simulation Coordinates

--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -6,15 +6,16 @@
 <!--Card to populate the page with case studies-->
 <ul class="card-list">
   <li *ngFor="let caseStudy of case_studies" class="card-item">
-    <a [routerLink]="'/caseStudy/' + caseStudy.id" class="card-link">
+    <a routerLink="/case-study/{{caseStudy.id}}" class="card-link">
       <div class="card">
         <img class="card-img-top" [src]="caseStudy.imageUrl" [alt]="caseStudy.name">
         <div class="card-body">
           <h5 class="card-title">{{caseStudy.name}}</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a [routerLink]="'/case-study/' + caseStudy.id" class="btn btn-primary">Investigate</a>
+          <a routerLink="/case-study/{{caseStudy.id}}" class="btn btn-primary">Investigate</a>
         </div>
       </div>
     </a>
   </li>
 </ul>
+
