created visual fields test by confrontation

--- a/frontend/src/app/components/pages/case-study-page/case-study-page.component.html
+++ b/frontend/src/app/components/pages/case-study-page/case-study-page.component.html
@@ -11,8 +11,7 @@
             <!--Links to the tests-->
             <button mat-menu-item><a routerLink="/case-study-detail/{{caseStudy.id}}">Speak to {{caseStudy.name}}</a></button>
             <button mat-menu-item><a routerLink="/pupil-reflexes-test/{{caseStudy.id}}">Pupil Reflexes Test</a></button>
-            <button mat-menu-item>Visual Fields Test By Confrontation</button>
-            <button mat-menu-item>Visual Acuity Test</button>
+            <button mat-menu-item><a routerLink="/visual-fields-test/{{caseStudy.id}}">Visual Fields Test By Confrontation</a></button>            <button mat-menu-item>Visual Acuity Test</button>
             <button mat-menu-item>Eye Movements Test</button>
             <button mat-menu-item>Direct Ophthalmoscopy Test</button>
             <button mat-menu-item>Examination Summary</button>
