edited the visual fields by confrontation. Created eye movements test

--- a/frontend/src/app/components/pages/visual-acuity-test/visual-acuity-test.component.html
+++ b/frontend/src/app/components/pages/visual-acuity-test/visual-acuity-test.component.html
@@ -1,1 +1,16 @@
-<p>visual-acuity-test works!</p>
+<div class="container">
+  <h1>Visual Acuity Test</h1>
+ <!--Canvas container start-->
+    <!--Show PNG image of snellen chart-->
+    <div id="canvasContainer">
+      <img
+        id="snellenChart"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Snellen_chart.svg/640px-Snellen_chart.svg.png"
+      />
+    </div>
+    <!--Canvas container End-->
+
+    <!--Buttons to zoom in and out-->
+    <button id="zoomIn">Zoom In</button>
+    <button id="zoomOut">Zoom Out</button>
+</div>
