--- a/frontend/src/app/components/pages/visual-fields-test/visual-fields-test.component.html
+++ b/frontend/src/app/components/pages/visual-fields-test/visual-fields-test.component.html
@@ -1,6 +1,8 @@
-<div class="container">
-  <h1>Visual Fields Test By Confrontation</h1>
-  <canvas id="myCanvas" width="480" height="320"></canvas>
+<div id="canvasContainer">
+  <canvas id="myCanvas" width="800" height="700"></canvas>
+  <button id="topLeftButton">Top Left Button</button>
+  <button id="topRightButton">Top Right Button</button>
+  <button id="bottomLeftButton">Bottom Left Button</button>
+  <button id="bottomRightButton">Bottom Right Button</button>
+  <p id="message"></p>
 </div>
-
-
