--- a/frontend/src/app/components/pages/case-study-page/case-study-page.component.html
+++ b/frontend/src/app/components/pages/case-study-page/case-study-page.component.html
@@ -11,8 +11,9 @@
             <!--Links to the tests-->
             <button mat-menu-item><a routerLink="/case-study-detail/{{caseStudy.id}}">Speak to {{caseStudy.name}}</a></button>
             <button mat-menu-item><a routerLink="/pupil-reflexes-test/{{caseStudy.id}}">Pupil Reflexes Test</a></button>
-            <button mat-menu-item><a routerLink="/visual-fields-test/{{caseStudy.id}}">Visual Fields Test By Confrontation</a></button>            <button mat-menu-item>Visual Acuity Test</button>
-            <button mat-menu-item>Eye Movements Test</button>
+            <button mat-menu-item><a routerLink="/visual-fields-test/{{caseStudy.id}}">Visual Fields Test By Confrontation **this is just eye movements need to edit code</a></button>       
+            <button mat-menu-item><a routerLink="/visual-acuity-test/{{caseStudy.id}}">Visual Acuity Test</a></button>  
+            <button mat-menu-item><a routerLink="/eye-movements-test/{{caseStudy.id}}">Eye Movements Test</a></button>        
             <button mat-menu-item>Direct Ophthalmoscopy Test</button>
             <button mat-menu-item>Examination Summary</button>
           </mat-menu>
