--- a/frontend/src/app/components/pages/case-study-page/case-study-page.component.html
+++ b/frontend/src/app/components/pages/case-study-page/case-study-page.component.html
@@ -14,7 +14,7 @@
             <button mat-menu-item><a routerLink="/visual-fields-test/{{caseStudy.id}}">Visual Fields Test By Confrontation **this is just eye movements need to edit code</a></button>       
             <button mat-menu-item><a routerLink="/visual-acuity-test/{{caseStudy.id}}">Visual Acuity Test</a></button>  
             <button mat-menu-item><a routerLink="/eye-movements-test/{{caseStudy.id}}">Eye Movements Test</a></button>        
-            <button mat-menu-item>Direct Ophthalmoscopy Test</button>
+            <button mat-menu-item><a routerLink="/direct-ophthalmoscopy-test/{{caseStudy.id}}">Direct Ophthalmoscopy</a></button> 
             <button mat-menu-item>Examination Summary</button>
           </mat-menu>
         </li>
