--- a/frontend/src/app/components/pages/eye-movements-test/eye-movements-test.component.html
+++ b/frontend/src/app/components/pages/eye-movements-test/eye-movements-test.component.html
@@ -1,6 +1,12 @@
-<div class="container">
-  <h1>Visual Fields Test By Confrontation</h1>
-  <canvas id="myCanvas" width="480" height="320"></canvas>
+<div class="parent-container">
+   <!--navbar partial-->
+   <app-navbar></app-navbar>
+  <!--eye movements container-->
+  <div class="eye-movements-container">
+    <h1 class="title">Visual Fields Test By Confrontation</h1>
+    <canvas id="myCanvas" width="600" height="600"></canvas>
+  </div>
+ 
 </div>
 
 
