--- a/frontend/src/app/components/pages/pupil-reflexes-test/pupil-reflexes-test.component.html
+++ b/frontend/src/app/components/pages/pupil-reflexes-test/pupil-reflexes-test.component.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eye Test - follow eye</title>
-  </head>
-  <body>
-    <canvas id="myCanvas" width="480" height="320"></canvas>
-  </body>
-</html>
+<div class="parent-container">
+  <!--navbar partial-->
+  <app-navbar></app-navbar>
+  <!--pupil reflexes container-->
+  <div class="eye-movements-container">
+    <h1 class="title">Pupil Reflexes Test</h1>
+    <canvas id="myCanvas" width="600" height="600"></canvas>
+  </div>
+</div>
