--- a/frontend/src/app/components/pages/visual-acuity-test/visual-acuity-test.component.html
+++ b/frontend/src/app/components/pages/visual-acuity-test/visual-acuity-test.component.html
@@ -1,5 +1,9 @@
-<div class="container">
-  <h1>Visual Acuity Test</h1>
+
+<div class="parent-container">
+  <!--navbar partial-->
+  <app-navbar></app-navbar>
+<div class="visual-acuity-container">
+  <h1 class="title">Visual Acuity Test</h1>
  <!--Canvas container start-->
     <!--Show PNG image of snellen chart-->
     <div id="canvasContainer">
@@ -13,4 +17,5 @@
     <!--Buttons to zoom in and out-->
     <button id="zoomIn">Zoom In</button>
     <button id="zoomOut">Zoom Out</button>
+</div>
 </div>
