--- a/frontend/src/app/components/partials/navbar/navbar.component.html
+++ b/frontend/src/app/components/partials/navbar/navbar.component.html
@@ -11,7 +11,7 @@
           <!--Links to the tests-->
           <button mat-menu-item><a routerLink="/case-study-detail/{{caseStudy.id}}">Speak to {{caseStudy.name}}</a></button>
           <button mat-menu-item><a routerLink="/pupil-reflexes-test/{{caseStudy.id}}">Pupil Reflexes Test</a></button>
-          <button mat-menu-item><a routerLink="/visual-fields-test/{{caseStudy.id}}">Visual Fields Test By Confrontation **this is just eye movements need to edit code</a></button>       
+          <button mat-menu-item><a routerLink="/visual-fields-test/{{caseStudy.id}}">Visual Fields Test By Confrontation</a></button>       
           <button mat-menu-item><a routerLink="/visual-acuity-test/{{caseStudy.id}}">Visual Acuity Test</a></button>  
           <button mat-menu-item><a routerLink="/eye-movements-test/{{caseStudy.id}}">Eye Movements Test</a></button>        
           <button mat-menu-item><a routerLink="/direct-ophthalmoscopy-test/{{caseStudy.id}}">Direct Ophthalmoscopy</a></button> 
