--- a/frontend/src/app/components/pages/visual-fields-test/visual-fields-test.component.html
+++ b/frontend/src/app/components/pages/visual-fields-test/visual-fields-test.component.html
@@ -1,8 +1,16 @@
-<div id="canvasContainer">
-  <canvas id="myCanvas" width="800" height="700"></canvas>
-  <button id="topLeftButton">Top Left Button</button>
-  <button id="topRightButton">Top Right Button</button>
-  <button id="bottomLeftButton">Bottom Left Button</button>
-  <button id="bottomRightButton">Bottom Right Button</button>
-  <p id="message"></p>
+<div class="parent-container">
+  <!--navbar partial-->
+  <app-navbar></app-navbar>
+  <!--Visual fields test-->
+  <div class="eye-movements-container">
+    <h1 class="title">Pupil Reflexes Test</h1>
+    <div id="canvasContainer">
+      <canvas id="myCanvas" width="600" height="700"></canvas>
+      <button class="button" id="topLeftButton">Top Left Button</button>
+      <button class="button" id="topRightButton">Top Right Button</button>
+      <button class="button" id="bottomLeftButton">Bottom Left Button</button>
+      <button class="button" id="bottomRightButton">Bottom Right Button</button>
+      <p id="message"></p>
+    </div>  
+  </div>
 </div>
