--- a/frontend/src/app/components/pages/direct-ophthalmoscopy-test/direct-ophthalmoscopy-test.component.html
+++ b/frontend/src/app/components/pages/direct-ophthalmoscopy-test/direct-ophthalmoscopy-test.component.html
@@ -1,22 +1,33 @@
-<div class="container">
-  <h1>Direct Ophthalmoscopy</h1>
-<!--Black Background-->
-<div id="black-background"></div>
-
-<!--Background image of eye -->
-<div id="background-image"></div>
-
-
-<!--Mask layer-->
-<div id="maskLayer">
-<svg id="maskSvg" width="100%" height="100%">
-  <defs>
-    <mask id="mask">
-      <rect width="100%" height="100%" fill="white"/>
-      <circle id="maskCircle" cx="0" cy="0" r="50" fill="black"/>
-    </mask>
-  </defs>
-  <rect width="100%" height="100%" fill="black" mask="url(#mask)"/>
-</svg>
-</div>
+<div class="parent-container">
+  <!--navbar partial-->
+  <app-navbar></app-navbar>
+  <!--Right Container-->
+  <div class="right-container">
+    <!--Title-->
+    <div class="title-container">
+      <h1 class="title">Direct Ophthalmoscopy</h1>
+    </div>
+    <!--Direct Ophthalmoscopy Test-->
+    <div class="ophthalmoscopy-container">
+      <div id="canvasContainer">
+        <canvas id="myCanvas" width="600" height="600"></canvas>
+      </div>
+      <!--Black Background-->
+      <div id="black-background"></div>
+      <!--Background image of eye -->
+      <div id="background-image"></div>
+      <!--Mask layer-->
+      <div id="maskLayer">
+        <svg id="maskSvg" width="100%" height="100%">
+          <defs>
+            <mask id="mask">
+              <rect width="100%" height="100%" fill="white"/>
+              <circle id="maskCircle" cx="0" cy="0" r="50" fill="black"/>
+            </mask>
+          </defs>
+          <rect width="100%" height="100%" fill="black" mask="url(#mask)"/>
+        </svg>
+      </div>
+    </div>
+  </div>
 </div>
