--- a/frontend/src/app/components/partials/header/header.component.css
+++ b/frontend/src/app/components/partials/header/header.component.css
@@ -1,18 +1,21 @@
 header{
   position: relative;
-  background: white;
+  background: #f8f9fa;
   padding: 0;
-  border-bottom: 1px solid #e72929;
+  border-bottom: 1px solid #ced4da;
 }
 
 a{
-  color: #af1313;
+  color: #6c757d;
+  text-decoration: none; 
 }
 
 a:hover{
-  background:#e72929;
-  color: white;
+  background: #e9ecef;
+  color: #495057;
   cursor: pointer;
+  border-radius: 15px; /* Adjust this value to your liking */
+
 }
 
 .container{
@@ -20,10 +23,16 @@ a:hover{
   display: flex;
   justify-content: space-between;
 }
+h1 {
+margin-top: 20px;
+margin-right: 20px;
+}
 
 a.logo{
   font-weight: bold;
   padding: 1rem;
+  color: #9c88ff; /* lilac color */
+  text-decoration: none; 
 }
 
 ul{
@@ -38,7 +47,7 @@ ul a{
 }
 
 a span{
-  background: #ff4d4d;
+  background: #9c88ff; /* lilac color */
   color: white;
   padding: 0.1rem 0.45rem;
   border-radius: 100rem;
@@ -52,12 +61,13 @@ a span{
 .menu{
   position:absolute;
   z-index:1;
-  background:whitesmoke;
+  background:#f8f9fa;
   display: none;
 }
 
 .menu-container:hover .menu{
   display: block;
+  border-radius: 15px; /* Adjust this value to your liking */
 }
 
 .menu a{
