--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -1,22 +1,22 @@
 <header>
   <div class="container">
-    <a routerLink="/" class="logo">Visual Eye Simulation</a>
+   <h1><a routerLink="/" class="logo">Visual Eye Simulation</a></h1>
     <nav>
       <ul>
         <li>
-          <a routerLink="/login">Login</a>
+         <h3> <a routerLink="/login">Login</a></h3>
         </li>
         <li class="menu-container">
-          <a routerLink="/dashboard">Username</a>
+          <h3><a routerLink="/dashboard">Username</a></h3>
           <div class="menu">
-            <a routerLink="/profile">Profile</a>
-            <a>Logout</a>
+            <h3><a routerLink="/profile">Profile</a></h3>
+            <h3><a>Logout</a></h3>
           </div>
         </li>
         <li>
-          <a routerLink="/cart-page">
+          <h3><a routerLink="/cart-page">
             Cart <span>3</span>
-          </a>
+          </a></h3>
         </li>
       </ul>
     </nav>
