--- a/frontend/src/app/components/partials/navbar/navbar.component.css
+++ b/frontend/src/app/components/partials/navbar/navbar.component.css
@@ -7,12 +7,13 @@
 .case-study-header {
   padding: 1rem;
   font-weight: bold;
+  color: #9c88ff; /* Lilac */
 }
 
 .navbar {
   display: flex;
   flex-direction: column; /* Vertically stack navbar items */
-  border-right: 1px solid #e72929;
+  border-right: 1px solid #e9ecef; /* Light grey */
   padding-right: 1rem;
   margin-right: 1rem;
 }
@@ -20,12 +21,36 @@
 .navbar a {
   padding: 1rem;
   display: block; /* Make navbar items block elements to occupy full width */
-  color: #af1313;
+  color: #9c88ff; /* Dark grey */
+  text-decoration: none; /* Remove underline */
 }
 
 .navbar a:hover {
-  background: #e72929;
-  color: white;
+  background: #e9ecef; /* Light grey */
+  color: #495057; /* Dark grey */
+  border-radius: 15px; /* Adjust this value to your liking */
+}
+
+/* DropDown Styles */
+.dropdown button {
+  background: none;
+  border: none;
+  color: #6c757d;
+  text-align: left;
+  padding-left: 1rem;
+  width: 100%;
+  text-decoration: none;
+}
+
+.dropdown button:hover {
+  background: #e9ecef;
+  color: #495057;
+  border-radius: 15px; /* Adjust this value to your liking */
+
+}
+
+.dropdown button:focus {
+  outline: none;
 }
 
 /* Case Study Details */
@@ -34,7 +59,7 @@
 }
 
 .case-study-details .header .name {
-  color: #af1313;
+  color: #9c88ff; /* Lilac */
   font-weight: bold;
 }
 
@@ -44,4 +69,37 @@
   .container.case-study {
     flex-direction: column;
   }
+}
+
+/* Dropdown Menu */
+.dropdown {
+  position: relative;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  left: 100%;
+  top: 0;
+  min-width: 200px;
+  padding: 1rem;
+  background: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-menu a {
+  padding: 0.5rem 1rem;
+  display: block;
+  text-decoration: none;
+  color: #6c757d;
+}
+
+.dropdown-menu a:hover {
+  background: #e9ecef;
+  color: #495057;
 }
