--- a/frontend/src/app/components/partials/navbar/navbar.component.html
+++ b/frontend/src/app/components/partials/navbar/navbar.component.html
@@ -1,23 +1,21 @@
-<!--Navbar html for the use cases-->
-
 <div class="navbar navbar-default">
   <h1 class="case-study-header"><a routerLink="/case-study/{{caseStudy.id}}">{{caseStudy.name}}</a></h1>
   <div class="navbar-inner">
     <ul class="nav navbar-nav">
       <li class="active"><a routerLink="/case-study-detail/{{caseStudy.id}}">Background Info</a></li>
       <li class="dropdown">
-        <button mat-button [matMenuTriggerFor]="examinations" (mouseenter)="menu.openMenu()">Examinations</button>
-        <mat-menu #examinations="matMenu">
+        <a class="dropdown-toggle">Examinations</a>
+        <ul class="dropdown-menu">
           <!--Links to the tests-->
-          <button mat-menu-item><a routerLink="/case-study-detail/{{caseStudy.id}}">Speak to {{caseStudy.name}}</a></button>
-          <button mat-menu-item><a routerLink="/pupil-reflexes-test/{{caseStudy.id}}">Pupil Reflexes Test</a></button>
-          <button mat-menu-item><a routerLink="/visual-fields-test/{{caseStudy.id}}">Visual Fields Test By Confrontation</a></button>       
-          <button mat-menu-item><a routerLink="/visual-acuity-test/{{caseStudy.id}}">Visual Acuity Test</a></button>  
-          <button mat-menu-item><a routerLink="/eye-movements-test/{{caseStudy.id}}">Eye Movements Test</a></button>        
-          <button mat-menu-item><a routerLink="/direct-ophthalmoscopy-test/{{caseStudy.id}}">Direct Ophthalmoscopy</a></button> 
-          <button mat-menu-item><a routerLink="/welcome">Test Yourself</a></button> 
-          <button mat-menu-item>Examination Summary</button>
-        </mat-menu>
+          <li><a routerLink="/case-study-detail/{{caseStudy.id}}">Speak to {{caseStudy.name}}</a></li>
+          <li><a routerLink="/pupil-reflexes-test/{{caseStudy.id}}">Pupil Reflexes Test</a></li>
+          <li><a routerLink="/visual-fields-test/{{caseStudy.id}}">Visual Fields Test By Confrontation</a></li>       
+          <li><a routerLink="/visual-acuity-test/{{caseStudy.id}}">Visual Acuity Test</a></li>  
+          <li><a routerLink="/eye-movements-test/{{caseStudy.id}}">Eye Movements Test</a></li>        
+          <li><a routerLink="/direct-ophthalmoscopy-test/{{caseStudy.id}}">Direct Ophthalmoscopy</a></li> 
+          <li><a routerLink="/welcome">Test Yourself</a></li> 
+          <li>Examination Summary</li>
+        </ul>
       </li>
       <li><a href="#">Investigation</a></li>
       <li><a href="#">Investigation images</a></li>
