--- a/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.html
+++ b/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.html
@@ -6,16 +6,17 @@
   <div class="right-container">
     <!-- case-study-detail.component.html -->
     <div class="case-study-details">
-      <img class="case-study-image" [src]="caseStudy.imageUrl" [alt]="caseStudy.name" />
+      <img class="case-study-image" [src]="caseStudy?.imageUrl" [alt]="caseStudy?.name" />
       <div class="header">
-        <span class="name"><strong>Name: </strong> {{caseStudy.name}}</span>
+        <span class="name"><strong>Name: </strong> {{caseStudy?.name}}</span>
       </div>
-      <p><strong>Age:</strong> {{ caseStudy.age }}</p>
-      <p><strong>Gender:</strong> {{ caseStudy.gender }}</p>
-      <p><strong>Medical History:</strong> {{ caseStudy.medicalHistory }}</p>
-      <p><strong>Drug Information:</strong> {{ caseStudy.drugInfo }}</p>
-      <p><strong>Social Information:</strong> {{ caseStudy.socialInfo }}</p>
-      <p><strong>Family History:</strong> {{ caseStudy.familyHistory }}</p>
+      <p><strong>Age:</strong> {{ caseStudy?.age }}</p>
+      <p><strong>Gender:</strong> {{ caseStudy?.gender }}</p>
+      <p><strong>Medical History:</strong> {{ caseStudy?.medicalHistory }}</p>
+      <p><strong>Drug Information:</strong> {{ caseStudy?.drugInfo }}</p>
+      <p><strong>Social Information:</strong> {{ caseStudy?.socialInfo }}</p>
+      <p><strong>Family History:</strong> {{ caseStudy?.familyHistory }}</p>
     </div>
+    
   </div>
 </div>
