--- a/frontend/src/app/components/partials/navbar/navbar.component.html
+++ b/frontend/src/app/components/partials/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         <a class="dropdown-toggle">Examinations</a>
         <ul class="dropdown-menu">
           <!--Links to the tests-->
-          <li><a routerLink="/case-study-detail/{{caseStudy.id}}">Speak to {{caseStudy.name}}</a></li>
+          <li><a routerLink="/case-study-detail/:useCaseId">Speak to {{caseStudy.name}}</a></li>
           <li><a routerLink="/pupil-reflexes-test/{{caseStudy.id}}">Pupil Reflexes Test</a></li>
           <li><a routerLink="/visual-fields-test/{{caseStudy.id}}">Visual Fields Test By Confrontation</a></li>       
           <li><a routerLink="/visual-acuity-test/{{caseStudy.id}}">Visual Acuity Test</a></li>  
