--- a/frontend/src/app/components/partials/navbar/navbar.component.html
+++ b/frontend/src/app/components/partials/navbar/navbar.component.html
@@ -1,18 +1,18 @@
 <div class="navbar navbar-default">
-  <h1 class="case-study-header"><a routerLink="/case-study/{{caseStudy.id}}">{{caseStudy.name}}</a></h1>
+  <h1 class="case-study-header"><a routerLink="/case-study/{{caseStudy._id}}">{{caseStudy.name}}</a></h1>
   <div class="navbar-inner">
     <ul class="nav navbar-nav">
-      <li class="active"><a routerLink="/case-study-detail/{{caseStudy.id}}">Background Info</a></li>
+      <li class="active"><a routerLink="/case-study-detail/{{caseStudy._id}}">Background Info</a></li>
       <li class="dropdown">
         <a class="dropdown-toggle">Examinations</a>
         <ul class="dropdown-menu">
           <!--Links to the tests-->
           <li><a routerLink="/case-study-detail/:useCaseId">Speak to {{caseStudy.name}}</a></li>
-          <li><a routerLink="/pupil-reflexes-test/{{caseStudy.id}}">Pupil Reflexes Test</a></li>
-          <li><a routerLink="/visual-fields-test/{{caseStudy.id}}">Visual Fields Test By Confrontation</a></li>       
-          <li><a routerLink="/visual-acuity-test/{{caseStudy.id}}">Visual Acuity Test</a></li>  
-          <li><a routerLink="/eye-movements-test/{{caseStudy.id}}">Eye Movements Test</a></li>        
-          <li><a routerLink="/direct-ophthalmoscopy-test/{{caseStudy.id}}">Direct Ophthalmoscopy</a></li> 
+          <li><a routerLink="/pupil-reflexes-test/{{caseStudy._id}}">Pupil Reflexes Test</a></li>
+          <li><a routerLink="/visual-fields-test/{{caseStudy._id}}">Visual Fields Test By Confrontation</a></li>       
+          <li><a routerLink="/visual-acuity-test/{{caseStudy._id}}">Visual Acuity Test</a></li>  
+          <li><a routerLink="/eye-movements-test/{{caseStudy._id}}">Eye Movements Test</a></li>        
+          <li><a routerLink="/direct-ophthalmoscopy-test/{{caseStudy._id}}">Direct Ophthalmoscopy</a></li> 
           <li><a routerLink="/welcome">Test Yourself</a></li> 
           <li>Examination Summary</li>
         </ul>
