made edits to view, question and welcome page mostly superficial

--- a/frontend/src/app/components/pages/welcome/welcome.component.html
+++ b/frontend/src/app/components/pages/welcome/welcome.component.html
@@ -12,8 +12,5 @@
   </ol>
 
   <h1 style="font-family: cursive;text-align:center">All the best!!</h1>
-  <div class="name col-md-4 my-3"></div>
-  <label for="">Enter your name:</label>
-  <input #name type="text" class="form-control">
-  <button class="btn btn-primary bt-lg" routerLink="/question">Start the Quiz!!</button>
+  <button class="btn btn-primary bt-lg" (click)="startQuiz()">Start the Quiz!!</button>
 </div>
