--- a/frontend/src/app/components/partials/navbar/navbar.component.css
+++ b/frontend/src/app/components/partials/navbar/navbar.component.css
@@ -85,7 +85,7 @@
   padding: 1rem;
   background: #fff;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 99;/*makes sure that it sits above the direct opthamology test*/
 }
 
 .dropdown:hover .dropdown-menu {
