Attempted to implement Auth0

--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<!--home.component.html-->
+<!--frontend/src/app/components/pages/home/home.component.html-->
 <!--Homepage to show all the case studies you can select-->
 <h2 class="text-center">Case Studies</h2>
 <p class="text-center">Select which case study to investigate first</p>
