Registration, loading complete. Also, moved all eye tests code to the backend and sent to the frontend

--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -23,6 +23,8 @@
 
 <!--Create submit button callled login-->
     <default-button text="Login"></default-button>
+   
+     <!--Allow to register -->
     <div class="register">
       New user? &nbsp;
       <a routerLink="/register" [queryParams]="{returnUrl : returnUrl}">
