questions now are ID specific for each case study

--- a/frontend/src/app/components/pages/question/question.component.html
+++ b/frontend/src/app/components/pages/question/question.component.html
@@ -40,7 +40,7 @@
   </div>
   <div class="question">
     <div class="card">
-      <h3>{{questionList[currentQuestion]?.questionText}}</h3>
+      <h3>{{questionList[currentQuestion].questionText}}</h3>
     </div>
   </div>
 
