--- a/frontend/src/app/components/partials/navbar/navbar.component.html
+++ b/frontend/src/app/components/partials/navbar/navbar.component.html
@@ -13,7 +13,7 @@
           <li><a routerLink="/visual-acuity-test/{{caseStudy._id}}">Visual Acuity Test</a></li>  
           <li><a routerLink="/eye-movements-test/{{caseStudy._id}}">Eye Movements Test</a></li>        
           <li><a routerLink="/direct-ophthalmoscopy-test/{{caseStudy._id}}">Direct Ophthalmoscopy</a></li> 
-          <li><a routerLink="/welcome">Test Yourself</a></li> 
+          <li><a routerLink="/welcome/{{caseStudy._id}}">Test Yourself</a></li> 
           <li>Examination Summary</li>
         </ul>
       </li>
