frontend now connected to the backend with the quiz

--- a/frontend/src/app/components/pages/welcome/welcome.component.html
+++ b/frontend/src/app/components/pages/welcome/welcome.component.html
@@ -12,5 +12,5 @@
   </ol>
 
   <h1 style="font-family: cursive;text-align:center">All the best!!</h1>
-  <button class="btn btn-primary bt-lg" (click)="startQuiz()">Start the Quiz!!</button>
+  <button class="btn btn-primary bt-lg" (click)="startQuiz()" [disabled]="loading">Start the Quiz!!</button>
 </div>
