--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -22,7 +22,7 @@
 </text-input>
 
 <!--Create submit button callled login-->
-    <default-button text="Login"></default-button>
+    <default-button text="Login" bgColor="#9c88ff"></default-button>
    
      <!--Allow to register -->
     <div class="register">
