--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -1,7 +1,7 @@
 
 <header>
   <div class="container">
-    <a routerLink="/" class="logo">VSE</a>
+    <a routerLink="/" class="logo"><i class="fa-regular fa-eye fa-1.7x"></i> VSE <i class="fa-regular fa-eye  fa-1.7x"></i> </a>
     <nav>
       <ul>
         <!--If the user is not logged in just show login-->
