--- a/frontend/src/app/components/partials/header/header.component.css
+++ b/frontend/src/app/components/partials/header/header.component.css
@@ -1,66 +1,78 @@
-header{
+/*Header styles*/
+header {
   position: relative;
   background: white;
   padding: 0;
-  border-bottom: 1px solid #e72929;
+  border-bottom: 1px solid #9c88ff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Slightly darker shadow underneath */
 }
 
-a{
-  color: #af1313;
+i {
+  color: #9c88ff;
 }
 
-a:hover{
-  background:#e72929;
-  color: white;
+a {
+  color: #9c88ff;
+  font-size: 20px; /* Increase the font size for all text */
+  text-decoration: none; /* Remove underlines from links */
+}
+
+a:hover,
+i:hover {
+  background: #9c88ff; /* Lilac color on hover */
+  color: black; /* Text color becomes black on hover */
   cursor: pointer;
+  border-radius: 10px; /* Add curved edges to buttons */
 }
 
-.container{
+.container {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  font-size: 20px; /* Increase the font size for the container */
+  text-align: center;
 }
 
-a.logo{
+a.logo {
   font-weight: bold;
   padding: 1rem;
 }
 
-ul{
+ul {
   display: flex;
   list-style-type: none;
   margin: 0;
 }
 
-ul a{
+ul a {
   padding: 1rem;
   display: inline-block;
 }
 
-a span{
-  background: #ff4d4d;
+a span {
+  background: #9c88ff; /* Lilac color */
   color: white;
   padding: 0.1rem 0.45rem;
   border-radius: 100rem;
-  font-size:0.9rem;
+  font-size: 1.5rem; /* Increase the font size for the span */
 }
 
-.menu-container{
+.menu-container {
   position: relative;
 }
 
-.menu{
-  position:absolute;
-  z-index:1;
-  background:whitesmoke;
+.menu {
+  position: absolute;
+  z-index: 1;
+  background: whitesmoke;
   display: none;
 }
 
-.menu-container:hover .menu{
+.menu-container:hover .menu {
   display: block;
 }
 
-.menu a{
+.menu a {
   width: 100%;
-  min-width:8rem;
+  min-width: 8rem;
 }
